--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -15,4 +15,10 @@
   margin-bottom: 10px;
 }
 
-
+.field-message {
+  color:#f44336;
+  margin-top: -10px;
+  margin-bottom: 10px;
+  font-size: 75%;
+  font-family: "Roboto";
+}
