--- a/src/app/create-course/create-course-step-1/create-course-step-1.component.html
+++ b/src/app/create-course/create-course-step-1/create-course-step-1.component.html
@@ -1,4 +1,7 @@
+
 <div [formGroup]="form">
+<address-form legend='Address' formControlName="adress"></address-form>
+
     <mat-form-field>
         <input matInput placeholder="Course Title" formControlName="title" #title>
         <mat-hint align="end">
