Forms Arrays in Depth

--- a/src/app/create-course/create-course-step-2/create-course-step-2.component.html
+++ b/src/app/create-course/create-course-step-2/create-course-step-2.component.html
@@ -37,8 +37,8 @@
 
     </mat-form-field>
 
-    <div>{{form.value|json}} </div>
+    <!-- <div>{{form.value|json}} </div>
     
-    <div>FORM VALIDITY STATE{{form.valid}} </div>
+    <div>FORM VALIDITY STATE{{form.valid}} </div> -->
 
 </div>
