--- a/src/app/address-form/address-form.component.html
+++ b/src/app/address-form/address-form.component.html
@@ -34,7 +34,7 @@
 
     </mat-form-field>
 
-    <div class="form-val">
+    <!-- <div class="form-val">
 
         {{form.value | json}}
 
@@ -44,6 +44,6 @@
 
         {{form.valid | json}}
 
-    </div>
+    </div> -->
 
 </fieldset>
